# robot-baby

./: .gitignore  README.md
Common/: watcher.py
GenomeTransceiver/: GenomeTransceiver.py
Mating/: client.py  message.py  network.py  robot.py  run.py  server.py  setup.py  test.py
Mating/mating/: logging.py  message.py  network.py
Mating/mating/robot/: client.py  robot.py  server.py
Mating/mating/server/: server.py
Mating/mating/server/confs/: evolConf-full.txt
Mating/mating/server/parent/: gecko.genome.txt  spider.genome.txt
Mating/mating/test/gecko/: gecko.genome  run.py
Mating/mating/test/server/: RobotCrossover  json_converter.py  run.py
Mating/mating/test/server/parent/: car.genome.txt  gecko.genome.txt  snake.genome.txt  spider.genome.txt
Mating/mating/test/spider/: run.py  spider.genome
MatingServer/: Client.py  MatingServer.py  network.py  server.py
MatingTest/: README.txt
ModulesToPrint/: ActiveHinge_Frame.stl  ActiveHinge_Servo_Holder.stl  ActiveWheg.stl  BrickConnection.stl  FixedBrick.stl  RotationServoHolder.stl  ServoConnection.stl  core-advanced.stl
ModulesToPrint/FreeCADModels/: ActiveHingeFrame.FCStd  ActiveHingeFrame.FCStd1  ActiveHingeServoHolder.FCStd  ActiveHingeServoHolder.FCStd1  RotationServoHolder.FCStd  core-advanced.stl  core.FCStd  core.FCStd1
ParentGenomes/: car.genome  snake.genome
RobotController/: control_servos.py  main.py  robot_1.cfg  robot_brain.py  robot_controller.py
RobotController/Locomotion/: servo.py
RobotController/Mating/: message.py  robot.py  server.py
RobotController/RobotController/: main.cpp
RobotController/RobotController.xcodeproj/: project.pbxproj
RobotController/RobotController.xcodeproj/xcuserdata/bweel.xcuserdatad/xcschemes/: RobotController.xcscheme
RobotController/RobotController/Genome/: Mutator.cpp  Mutator.h  NeuralNetworkRepresentation.cpp  NeuralNetworkRepresentation.h  PartRepresentation.cpp  RobotRepresentation.cpp  RobotRepresentation.h  robogen.pb.h
RobotController/RobotController/Genome/ODE_Check/: BodyVerifier.h  RobogenCollision.cpp
RobotController/RobotController/Test/: i7alt.txt  spider9alt.txt
RobotController/RobotController/Transceivers/: GenomeTransceiver.h  UDPTransceiver.cpp  UDPTransceiver.h
RobotController/docs/: overview.tex
RobotController/hal/: fake_hal.py  hal.py  photocell.py
RobotController/hal/inputs/: fitness_querier.py  position.py
RobotController/hal/outputs/: StatusLED.py  rgbled.py  servo.py
RobotController/learning/: rlpower_algorithm.py  rlpower_controller.py
RobotController/locomotion/: fake_controller.py  servo.py  servo_controller.py
RobotController/movement/: rlpower_algorithm.py
RobotCrossover/RobotCrossover/: CMakeLists.txt  Makefile
RobotCrossover/RobotCrossover.xcodeproj/: project.pbxproj
RobotCrossover/RobotCrossover.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
RobotCrossover/RobotCrossover.xcodeproj/project.xcworkspace/xcshareddata/: RobotController.xccheckout  RobotCrossover.xccheckout
RobotCrossover/RobotCrossover.xcodeproj/project.xcworkspace/xcuserdata/bweel.xcuserdatad/: UserInterfaceState.xcuserstate
RobotCrossover/RobotCrossover/Genome/: Mutator.cpp  NeuralNetworkRepresentation.h  PartRepresentation.h  RobotRepresentation.cpp  robogen.pb.cc
RobotCrossover/RobotCrossover/Test/: car.txt  child2.txt
Watcher/: robogen-file-viewer  watcher.py
robot-baby.xcworkspace/: contents.xcworkspacedata
robot-baby.xcworkspace/xcshareddata/: robot-baby.xccheckout
robot-baby.xcworkspace/xcuserdata/bweel.xcuserdatad/: UserInterfaceState.xcuserstate
robot_localization/: .gitignore  CMakeLists.txt  camera.xml  client-test.c  common.h  connection.cpp  connection.h  connection_listener.cpp  connection_listener.h  fitness_service.cpp  fitness_service.h  main.cpp  process.cpp  process.h  qr.cpp  qr.h  reacTIVision.xml  robot_path.cpp  robot_path.h  shared_data.cpp  shared_data.h  tuio.cpp  tuio.h
robot_localization/TUIO/: LibExport.h
robot_localization_old/: qr.cpp
(+3 files in other folders)
